--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<body>
 		<!----------------悬浮-------------->
-		<div class="fly">
+		<div id="fly" class="fly">
 			<img src="img/M12_4_214404.png" />
 			<a class="return" href="#"></a>
 		</div>
@@ -234,7 +234,7 @@
 					</ul>
 				</div>
 				<div class="right1">
-					<img src="img/jietu2.png" </div>
+					<img src="centerimg/M10_24_155104.gif" </div>
 
 				</div>
 			</div>
