--- a/center.html
+++ b/center.html
@@ -364,6 +364,6 @@
 	</body>
 
 </html>
-<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.js"></script>
+<script src="https://cdn.bootcss.com/jquery/1.8.3/jquery.js"></script>
 <script type="text/javascript" src="js/jsonp.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/center.js"></script>
