--- a/shop.html
+++ b/shop.html
@@ -338,5 +338,5 @@
 	</body>
 
 </html>
-<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/1.8.3/jquery.js"></script>
 <script type="text/javascript" src="js/shop.js" ></script>
