这是加了数据库的

--- a/list.html
+++ b/list.html
@@ -52,7 +52,7 @@
 						<a href="javascript:;"> 收藏梦芭莎</a>
 					</li>
 					<li>
-						<a href="javascript:;"><img src="imgshop/btn_13.png" /> 购物车</a>
+						<a href="shop.html"><img src="imgshop/btn_13.png" /> 购物车</a>
 					</li>
 					<li class="all1-1">
 						<a class="all1" style="border: none;padding: 0;" href="javascript:;"><img src="imgshop/btn_15.png" /> 全部分类
@@ -184,7 +184,7 @@
 				</div>
 				<div class="serve-right">
 					<div class="box-input">
-						<input id="input1" class="serve-input" type="text" value="搜索 商品/品牌" />
+						<input id="input1" class="serve-input" type="text" placeholder="搜索 商品/品牌" />
 						<ul id="list">
 
 						</ul>
@@ -347,7 +347,7 @@
 
 			<ul class="list2">
 				<li>
-					<a href="javascript:;">女装</a>
+					<a href="shopcar.html">女装</a>
 				</li>
 				<li>
 					<a href="javascript:;">M/J男装</a>
@@ -384,7 +384,7 @@
 				<dd>
 					<span>蒙蒂埃莫新型纺织花纱</span>
 					<p>
-						<a href="javascript:;">12.12狂欢价￥<b>269</b></a>原价￥<span style="text-decoration: line-through;">339</span>
+						<a href="shopcar.html">12.12狂欢价￥<b>269</b></a>原价￥<span style="text-decoration: line-through;">339</span>
 					</p>
 					<div>
 						<img src="listimg/M11_8_133218_03.jpg" />
@@ -396,7 +396,7 @@
 				<dd>
 					<span>蒙蒂埃莫新型纺织花纱</span>
 					<p>
-						<a href="javascript:;">12.12狂欢价￥<b>269</b></a>原价￥<span style="text-decoration: line-through;">339</span>
+						<a href="shopcar.html">12.12狂欢价￥<b>269</b></a>原价￥<span style="text-decoration: line-through;">339</span>
 					</p>
 					<div>
 						<img src="listimg/M11_8_133218_03.jpg" />
@@ -408,7 +408,7 @@
 				<dd>
 					<span>蒙蒂埃莫新型纺织花纱</span>
 					<p>
-						<a href="javascript:;">12.12狂欢价￥<b>269</b></a>原价￥<span style="text-decoration: line-through;">339</span>
+						<a href="shopcar.html">12.12狂欢价￥<b>269</b></a>原价￥<span style="text-decoration: line-through;">339</span>
 					</p>
 					<div>
 						<img src="listimg/M11_8_133218_03.jpg" />
@@ -420,7 +420,7 @@
 				<dd>
 					<span>蒙蒂埃莫新型纺织花纱</span>
 					<p>
-						<a href="javascript:;">12.12狂欢价￥<b>269</b></a>原价￥<span style="text-decoration: line-through;">339</span>
+						<a href="shopcar.html">12.12狂欢价￥<b>269</b></a>原价￥<span style="text-decoration: line-through;">339</span>
 					</p>
 					<div>
 						<img src="listimg/M11_8_133218_03.jpg" />
@@ -3506,25 +3506,7 @@
 			
 		</div>
 		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
 	</body>
 
 </html>
